<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2019 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--Topmost element margins are not supported (ignored) hence the wrapping FrameLayout-->
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UnusedAttribute">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacer_large"
            android:gravity="center_vertical|start"
            android:background="@drawable/border"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/magnolia_100"
                android:layout_margin="@dimen/spacer_large">

            <TextView
                    android:layout_margin="@dimen/spacer_small"
                    android:text="@string/id_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_margin="@dimen/spacer_small"
                    android:id="@+id/textViewItemText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textDirection="locale"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/magnolia_100"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="@dimen/spacer_large">

            <TextView
                    android:layout_margin="@dimen/spacer_small"
                    android:text="@string/count_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_margin="@dimen/spacer_small"
                    android:id="@+id/textViewCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:accessibilityLiveRegion="polite"/>
        </LinearLayout>

        <Button
                android:id="@+id/buttonCountIncrease"
                android:layout_margin="@dimen/spacer_large"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:text="@string/increase_count"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>